appId: com.stripe.android.financialconnections.example
---
- launchApp
# Android specific: Navigate to example (1)
- tapOn: "Playground"

# Android specific: Navigate to example (2)
- takeScreenshot: TestOAuth_ExampleAppLauncher
- tapOn:
      id: "Native_checkbox"
- tapOn:
      id: "Test_checkbox"
- tapOn:
      id: "Token_checkbox"
- tapOn: "Connect Accounts!"


# Common: web AuthFlow - connect OAuth institution
- assertVisible: "Enter account details manually instead"
- takeScreenshot: ManualEntry_Consent
- tapOn: "Enter account details manually instead"
- assertVisible: "Enter bank account details"
- takeScreenshot: ManualEntry_Input
- tapOn:
    id: "RoutingInput"
- inputText: "110000000"
- takeScreenshot: ManualEntry_RoutingNumber
- tapOn:
    id: "AccountInput"
- inputText: "000123456789"
- takeScreenshot: ManualEntry_AccountNumber
- scroll
- tapOn:
    id: "ConfirmAccountInput"
- inputText: "000123456789"
- takeScreenshot: ManualEntry_ConfirmAccountNumber
- tapOn: "Continue"
- assertVisible: "Micro-deposit initiated"
- takeScreenshot: ManualEntry_Success
- tapOn: "Done"
