appId: com.stripe.android.financialconnections.example
---
- launchApp
# Android specific: Navigate to example (1)
- tapOn# Android specific: Navigate to example (1)
- tapOn: "Collect account for data"

# Android specific: Navigate to example (2)
- takeScreenshot: TestOAuth_ExampleAppLauncher
- tapOn: "CONNECT AN ACCOUNT"

# Common: web AuthFlow - connect OAuth institution
- assertVisible: "Agree"
- takeScreenshot: TestOAuth_Consent
- tapOn: "Agree"
- assertVisible: "Test OAuth Institution"
- takeScreenshot: TestOAuth_BankPicker
# ERRORS
- tapOn: ".*unknown error.*"
- assertVisible: "Something went wrong"
- takeScreenshot: TestOAuth_ErrorDownBankUnknown
- back
- tapOn: ".*unscheduled.*"
- assertVisible: "Select another bank"
- takeScreenshot: TestOAuth_ErrorDownBankUnscheduled
- tapOn: "Select another bank"
# OAUTH - SELECT ALL ACCOUNTS
- tapOn: "Test OAuth Institution"
- assertVisible: "Continue"
- takeScreenshot: TestOAuth_Prepane
- tapOn: "Continue"
- assertVisible: "Select all accounts"
- takeScreenshot: TestOAuth_AccountPicker
- tapOn: "Select all accounts" # select all accounts
- takeScreenshot: TestOAuth_AccountPicker_AllAccounts
- tapOn: "Link accounts"
# START LINK MORE ACCOUNTS FLOW
- assertVisible: "Link another account"
- takeScreenshot: TestOAuth_Success
- tapOn: "Link another account"
# LEGACY - SELECT ALL ACCOUNTS
- assertVisible: "Test Institution"
- tapOn: "Test Institution"
- assertVisible: "Select all accounts"
- takeScreenshot: TestLegacy_AccountPicker
- tapOn: "Select all accounts" # select all accounts
- takeScreenshot: TestLegacy_AccountPicker_AllAccounts
- tapOn: "Link accounts"
- assertVisible: "Done"
- assertVisible: "Link another account"
- tapOn: "Done"
- assertVisible: ".*StripeBank - Success.*"