appId: com.stripe.android.financialconnections.example
tags:
  - all
  - edge
  - testmode-payments
---
- startRecording: ${'/tmp/test_results/testmode-paymentintent-testinstitution-instantdebits-' + new Date().getTime()}
- clearState
- openLink: stripeconnectionsexample://playground?integration_type=Standalone&experience=InstantDebits&flow=PaymentIntent&financial_connections_override_native=native&merchant=networking&financial_connections_test_mode=true&permissions=transactions,payment_method&financial_connections_confirm_intent=false
- scrollUntilVisible:
    element:
      id: "Customer email setting"
    timeout: 30000
- tapOn:
    id: "Customer email setting"
- inputRandomEmail
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "connect_accounts"
- tapOn:
    id: "connect_accounts"
# Wait until the consent button is visible
- extendedWaitUntil:
    visible:
      id: "consent_cta"
    timeout: 30000
- tapOn:
    id: "consent_cta"
# Enter phone number once the consumer lookup is done
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      text: ".*555.*" # wait for placeholder to be visible
- inputText: "6223115555"
- tapOn: "Continue with Link"
# Select "Payment Success" institution
- extendedWaitUntil:
    visible:
      id: "bcinst_QsDedeogZ5PA7V"
    timeout: 30000
- tapOn:
    id: "bcinst_QsDedeogZ5PA7V"
# Bypass Chrome on-boarding screen
- runFlow:
    file: ../common/subflow-skip-chrome-welcome.yaml
    env:
      APP_ID: com.stripe.android.financialconnections.example
# Select account and complete
- scrollUntilVisible:
    element:
      text: "Success"
    timeout: 60000
- tapOn: "Success"
- tapOn: "Connect account"
- extendedWaitUntil:
    visible: "Your account was connected"
    timeout: 30000
- assertVisible: "Your account was connected"
- tapOn:
    id: "done_button"
- scrollUntilVisible:
    element:
      text: "Session Completed!.*"
# Reuse account as returning user
- tapOn:
    id: "connect_accounts"
- extendedWaitUntil:
    visible:
      id: "consent_cta"
    timeout: 30000
- tapOn:
    id: "consent_cta"
# Continue with existing account
- extendedWaitUntil:
    visible:
      id: "existing_email-button"
    timeout: 30000
- tapOn:
    id: "existing_email-button"
- extendedWaitUntil:
    visible:
      id: "OTP-0"
    timeout: 30000
- assertVisible:
    id: "OTP-0"
- inputText: "111111"
# Select previously networked account and complete
- extendedWaitUntil:
    visible: "Success"
    timeout: 30000
- tapOn: "Success"
- tapOn: "Connect account"
- extendedWaitUntil:
    visible: "Your account was connected"
    timeout: 30000
- assertVisible: "Your account was connected"
- tapOn:
    id: "done_button"
- scrollUntilVisible:
    element:
      text: "Session Completed!.*"
- stopRecording
