appId: com.stripe.android.financialconnections.example
---
- launchApp
# Android specific: Navigate to example
- tapOn: "Playground"
- tapOn:
    id: "Native_checkbox"
- tapOn: "Mode_Dropdown_Icon"
- tapOn:
    id: "NetworkingTestMode_checkbox"
- tapOn:
    id: "PaymentIntent_checkbox"
- tapOn: Customer email (optional)
- inputText: "test@test.com"
- tapOn: "Connect Accounts!"
# Common: web AuthFlow - connect OAuth institution
- extendedWaitUntil:
    visible: "Agree"
    timeout: 30000
- tapOn: "Agree"
# LOGIN TO NETWORKING
- tapOn: test@test.com
  # 2FA
- assertVisible: "●"
- inputText: "111111"
# SELECT NETWORKED ACCOUNT
- tapOn: "Success"
- tapOn: "Connect account"
# STEP UP AUTHENTICATION
- assertVisible: "●"
- inputText: "111111"
- assertVisible: "Success!"
- assertVisible: ".*through Link.*"
- tapOn: "Done"
- assertVisible: ".*Intent Confirmed!.*"
