appId: com.stripe.android.financialconnections.example
---
- launchApp
# Android specific: Navigate to example
- tapOn: "Playground"
- tapOn:
    id: "Native_checkbox"
- tapOn: "Mode_Dropdown_Icon"
- tapOn:
    id: "NetworkingTestMode_checkbox"
- tapOn:
    id: "PaymentIntent_checkbox"
- tapOn: Customer email (optional)
- inputRandomEmail
- tapOn: "Connect Accounts!"
# Common: web AuthFlow - connect OAuth institution
- extendedWaitUntil:
    visible: "Agree"
    timeout: 30000
- tapOn: "Agree"
# SELECT LEGACY INSTITUTION
- tapOn: "Test Institution"
####### Bypass Chrome on-boarding screen #######
- runFlow:
    file: ../common/subflow-skip-chrome-welcome.yaml
    env:
      APP_ID: com.stripe.android.financialconnections.example
###############################################
# SELECT SUCCESS ACCOUNT
- extendedWaitUntil:
    visible: "Success"
    timeout: 60000
- tapOn: "Success"
- tapOn: "Link Account"
# ENTER PHONE FOR NEW NETWORKED USER
- tapOn: "Phone number"
- inputText: "6223115555"
- tapOn: "Save to Link"
# CONFIRM AND COMPLETE
- assertVisible: "Success!"
- assertVisible: ".*through Link.*"
- tapOn: "Done"
- assertVisible: ".*Intent Confirmed!.*"
