##
## This tests Networks a manually entered account
## and reuses the same account on the bank account token flow.
##
appId: com.stripe.android.financialconnections.example
tags:
  - all
  - testmode-token
---
- startRecording: ${'/tmp/test_results/testmode-nme-' + new Date().getTime()}
- clearState
- openLink: stripeconnectionsexample://playground?experience=FinancialConnections&flow=Token&financial_connections_override_native=native&merchant=networking&financial_connections_test_mode=true&permissions=payment_method&financial_connections_confirm_intent=true
- scrollUntilVisible:
    element:
      id: "connect_accounts"
    timeout: 30000
- tapOn:
    id: "Customer email setting"
- inputRandomEmail
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "connect_accounts"
- tapOn:
    id: "connect_accounts"
# Wait until the consent button is visible
- extendedWaitUntil:
    visible:
      id: "consent_cta"
    timeout: 30000
# Navigate to manual entry
- tapOn:
    # Maestro does not yet support tapping on annotated strings.
    # https://github.com/mobile-dev-inc/maestro/issues/389
    point: "50%,93%"
- extendedWaitUntil:
    visible: "Use test account"
    timeout: 30000
- tapOn: "Use test account"
## ENTER PHONE FOR NEW NETWORKED USER
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      text: ".*555.*" # wait for placeholder to be visible
- inputText: "6223115555"
- tapOn: "Save with Link"
# CONFIRM AND COMPLETE
- extendedWaitUntil:
    visible:
      id: "done_button"
    timeout: 30000
- tapOn:
    id: "done_button"
- scrollUntilVisible:
    element:
      text: ".*Completed.*"
############################################
## REUSE NEWLY CREATED NME ACCOUNT
############################################
- tapOn:
    id: "connect_accounts"
# Common: web AuthFlow - connect OAuth institution
- extendedWaitUntil:
    visible:
      id: "consent_cta"
    timeout: 30000
- tapOn:
    id: "consent_cta"
## LOGIN TO NETWORKING
- extendedWaitUntil:
    visible:
      id: "existing_email-button"
    timeout: 30000
- tapOn:
    id: "existing_email-button"
## 2FA
- extendedWaitUntil:
    visible:
      id: "OTP-0"
    timeout: 30000
- assertVisible:
    id: "OTP-0"
- inputText: "111111"
## SELECT NETWORKED ACCOUNT
# First institution should be auto selected.
- extendedWaitUntil:
    visible: "Connect account"
    timeout: 30000
- tapOn: "Connect account"
# CONFIRM AND COMPLETE
- extendedWaitUntil:
    visible:
      id: "done_button"
    timeout: 30000
- tapOn:
    id: "done_button"
- scrollUntilVisible:
    element:
      text: ".*Completed.*"
- stopRecording
