appId: com.stripe.android.financialconnections.example
tags:
  - all
  - livemode-data
---
- startRecording: ${'/tmp/test_results/livemode-data-finbank-' + new Date().getTime()}
- clearState
- openLink: stripeconnectionsexample://playground?integration_type=Standalone&experience=FinancialConnections&flow=Data&financial_connections_override_native=native&merchant=live_testing&financial_connections_test_mode=false
- scrollUntilVisible:
    element:
      id: "connect_accounts"
- tapOn:
    id: "connect_accounts"
# Wait until the consent button is visible
- extendedWaitUntil:
    visible:
      id: "consent_cta"
    timeout: 30000
# Common: web AuthFlow - connect OAuth institution
- tapOn: "Agree and continue"
# SEARCH AND SELECT FINBANK INSTITUTION
- tapOn: "Search"
- inputText: "finbank"
- tapOn:
    id: "bcinst_JFqgSnbqNULPX5"
####### Bypass Chrome on-boarding screen #######
- runFlow:
    file: ../common/subflow-skip-chrome-welcome.yaml
# LOG IN WITH TEST FINBANK INSTITUTION
- extendedWaitUntil:
    visible:
      text: "Banking Userid "
    timeout: 30000
- tapOn: "Banking Userid "
- inputText: "f_i_n"
- tapOn: "Banking Password "
- inputText: "b_a_n_k"
- hideKeyboard
- tapOn: "Submit"
###############################################
# SELECT ALL ACCOUNTS (they're preselected)
- extendedWaitUntil:
    visible: "Connect accounts"
    timeout: 60000
- tapOn: "Connect accounts" # select all accounts
# CONFIRM AND COMPLETE
- assertVisible: "Your accounts were connected"
- tapOn:
    id: "done_button"
- scrollUntilVisible:
    element:
      text: ".*Completed!.*"
- scrollUntilVisible:
    element:
      text: ".*FinBank.*"
- stopRecording
