appId: com.stripe.android.financialconnections.example
tags:
  - all
  - livemode-data
---
- startRecording: ${'/tmp/test_results/livemode-data-mxbank-' + new Date().getTime()}
- clearState
- openLink: stripeconnectionsexample://playground?integration_type=Standalone&experience=FinancialConnections&flow=Data&financial_connections_override_native=native&merchant=live_testing&financial_connections_test_mode=false
- scrollUntilVisible:
    element:
      id: "connect_accounts"
- tapOn:
    id: "connect_accounts"
# Wait until the consent button is visible
- extendedWaitUntil:
    visible:
      id: "consent_cta"
    timeout: 30000
# Common: web AuthFlow - connect OAuth institution
- tapOn: "Agree and continue"
# SEARCH AND SELECT FINBANK INSTITUTION
- tapOn: "Search"
- inputText: "mx"
- tapOn:
    id: "bcinst_NKJdZEPMVNdkLg"
- tapOn:
    id: "prepane_cta"
####### Bypass Chrome on-boarding screen #######
- runFlow:
    file: ../common/subflow-skip-chrome-welcome.yaml
# LOG IN WITH TEST FINBANK INSTITUTION
- tapOn: "Authorize"
###############################################
# NO ACCOUNT PICKER (skips account selection)
# CONFIRM AND COMPLETE
- extendedWaitUntil:
    visible: "Your accounts were connected"
    timeout: 60000
- tapOn:
    id: "done_button"
- scrollUntilVisible:
    element:
      text: ".*Completed!.*"
- scrollUntilVisible:
    element:
      text: ".*MX Bank.*"
- stopRecording
