# TEST DISABLED UNTIL BANKCON-14726 IS IMPLEMENTED.
appId: com.stripe.android.financialconnections.example
tags:
  - all
  - edge
  - testmode-payments
---
- startRecording: ${'/tmp/test_results/testmode-paymentintent-testinstitution-networking-' + new Date().getTime()}
- clearState
- openLink: stripeconnectionsexample://playground?integration_type=Standalone&experience=FinancialConnections&flow=PaymentIntent&financial_connections_override_native=native&merchant=networking&financial_connections_test_mode=true&permissions=transactions,payment_method&financial_connections_confirm_intent=true
- tapOn:
    id: "Customer email setting"
- inputRandomEmail
- hideKeyboard
- tapOn:
    id: "connect_accounts"
# Wait until the consent button is visible
- extendedWaitUntil:
    visible:
      id: "consent_cta"
    timeout: 30000
- tapOn:
    id: "consent_cta"
# SELECT LEGACY INSTITUTION
- tapOn: "Test (Non-OAuth)"
####### Bypass Chrome on-boarding screen #######
- runFlow:
    file: ../common/subflow-skip-chrome-welcome.yaml
    env:
      APP_ID: com.stripe.android.financialconnections.example
###############################################
# SELECT SUCCESS ACCOUNT
- scrollUntilVisible:
    element:
      text: "Success"
    timeout: 60000
- tapOn: "Success"
- tapOn: "Connect Account"
# ENTER PHONE FOR NEW NETWORKED USER
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      text: ".*555.*" # wait for placeholder to be visible
- inputText: "6223115555"
- tapOn: "Save with Link"
# CONFIRM AND COMPLETE
- assertVisible: "Your account was connected and saved with Link."
- tapOn:
    id: "done_button"
- scrollUntilVisible:
    element:
      text: ".*Intent Confirmed!.*"
###########################################
# REUSE NEWLY CREATED LINK ACCOUNT
###########################################
- tapOn:
    id: "connect_accounts"
# Common: web AuthFlow - connect OAuth institution
- extendedWaitUntil:
    visible:
      id: "consent_cta"
    timeout: 30000
- tapOn:
    id: "consent_cta"
# LOGIN TO NETWORKING
- assertVisible:
    id: "existing_email-button"
# Ensure the back button is not visible on the Link login bottom sheet
- assertNotVisible:
    id: "top-app-bar-back-button"
- tapOn:
    id: "existing_email-button"
# 2FA
- assertVisible:
    id: "OTP-0"
- inputText: "111111"
# SELECT NETWORKED ACCOUNT
- tapOn: "Success"
- tapOn: "Connect account"
# STEP UP AUTHENTICATION
- assertVisible:
    id: "OTP-0"
- inputText: "111111"
- assertVisible: "Your account was connected"
- tapOn:
    id: "done_button"
- scrollUntilVisible:
    element:
      text: ".*Intent Confirmed!.*"
- stopRecording
